// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell /> renders 1`] = `
<div>
  <div
    class="mantine-1avyp1d"
    style="position: relative;"
  >
    <div
      class="cell mantine-1avyp1d"
    >
      <div
        class="mantine-Center-root mantine-ojrz4j"
      >
        <div
          class="mantine-Text-root mantine-1jdpuv6"
        >
          N/A 
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cell /> when the user has a meal renders 1`] = `
<div>
  <div
    class="mantine-1avyp1d"
    style="position: relative;"
  >
    <div
      class="cell mantine-1avyp1d"
    >
      <div
        class="mantine-Center-root mantine-ojrz4j"
      >
        <div
          class="mantine-Text-root mantine-1jdpuv6"
        >
          test meal
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cell /> when the user has a meal when the meal has a note renders 1`] = `
<div>
  <div
    class="mantine-1avyp1d"
    style="position: relative;"
  >
    <div
      class="infoContainer mantine-1avyp1d"
    >
      <svg
        color="currentColor"
        fill="none"
        height="1.5em"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="1.5em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 18h7M7 14h1M7 10h3M7 2h9.5L21 6.5V19"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
        <path
          d="M3 20.5v-14A1.5 1.5 0 014.5 5h9.752a.6.6 0 01.424.176l3.148 3.148A.6.6 0 0118 8.75V20.5a1.5 1.5 0 01-1.5 1.5h-12A1.5 1.5 0 013 20.5z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
        <path
          d="M14 5v3.4a.6.6 0 00.6.6H18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
    <div
      class="cell mantine-1avyp1d"
    >
      <div
        class="mantine-Center-root mantine-ojrz4j"
      >
        <div
          class="mantine-Text-root mantine-1jdpuv6"
        >
          test meal
        </div>
      </div>
    </div>
  </div>
</div>
`;
